<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    tools:context="com.akristic.memorygem.screens.gameOver.GameOverFragment">

    <data>
        <variable
            name="gameOverViewModel"
            type="com.akristic.memorygem.screens.gameOver.GameOverViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:minHeight="380dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_dialog_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/game_over_level_text"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/game_over"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/game_over_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sigmar_one"
            android:gravity="center"
            android:maxWidth="500dp"
            android:paddingStart="50dp"
            android:paddingTop="8dp"
            android:paddingEnd="55dp"
            android:paddingBottom="8dp"
            app:layout_constraintVertical_bias="0.42"
            android:text="@string/game_over_message"
            android:textColor="@color/colorWhiteText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/game_over_share_button"
            style="@style/TextBlackStyle"
            android:text="@string/share"
            android:drawableEnd="@drawable/ic_baseline_share_24px"
            android:drawablePadding="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            app:layout_constraintTop_toBottomOf="@id/game_over_message_text"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/game_over_extra_life_button"
            style="@style/TextBlackStyle"
            android:text="@string/continue_video"
            android:drawableEnd="@drawable/ic_baseline_ondemand_video_24px"
            android:drawablePadding="@dimen/small_margin"
            android:padding="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            app:layout_constraintTop_toBottomOf="@id/game_over_message_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/game_over_ok_button"
            style="@style/ButtonTextBlackStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>